--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <h1>This is My First Jenkis Project
-   <body>
- <html>
+    <h1>This is My First Jenkis Project</h1>
+   </body>
+ </html>
